# hxaxd-research

./: .gitignore  AGENTS.md  API.md  LICENSE  NO-AGENTS.md  README.md  ROUTER.md  TODO.md  WORKFLOW.md  config.toml  paper_writing_template整理版.md  pyproject.toml  学习工作台重构计划.md  开发指南.md
backend/: EVOLUTION_GOAL_PROMPT.md  EVOLUTION_PLAN.md  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  main.py
backend/app/agent_tools/: __init__.py  capabilities.py  context.py  server.py  web_search.py
backend/app/agents/: __init__.py  claude_code.py  codex_app_server.py  job_handler.py  models.py  open_code_acp.py  (+8 more)
backend/scripts/: __init__.py  backup_data.py  restore_data.py  submit_papers.py
backend/tests/: conftest.py  fullstack_server.py  sample_data.py  test_agent_control_plane.py  test_agent_tool_closure.py  test_agent_tools.py  test_agent_web_search.py  test_api.py  test_api_v3.py  test_catalog_screening_v3.py  test_change_sets.py  test_config.py  test_device_access.py  test_documents.py  test_durable_jobs.py  test_frontend_hosting.py  test_library_v3.py  test_live_agent_runtime_capabilities.py  test_multi_agent_runtimes.py  test_operations_v3.py  test_pi_rpc.py  test_process_runner.py  test_public_api_projections.py  test_reading.py  test_snapshots.py  test_submit_papers.py  test_tex_tool.py  test_translation_backend.py  test_v2_importer.py  test_v3_database.py  test_v4_migration.py  test_workspace_concurrency.py  test_zotero_engine.py  test_zotero_http.py  test_zotero_mapping.py  test_zotero_planner.py  test_zotero_repository.py  test_zotero_router.py
(+428 files in other folders)
