[project]
name = "hxr"
version = "0.1.0"
description = "Agent-driven local research workspace for literature discovery, PDF processing, experimentation, academic writing, 和 peer review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "lxml>=5.3,<7",
  "markdown>=3.6,<4",
  "paddleocr[doc-parser]>=3.7,<4",
  "playwright>=1.48,<2",
  "pylatexenc>=2.10,<3",
]
