[project]
name = "hxaxd-research-backend"
version = "0.1.0"
description = "Web backend for the hxaxd research workspace"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116,<1",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
